Add Features for Tournaments